--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -403,6 +403,9 @@ gEnableMacAddrSpoof=1
 #Set RPS CPU mask
 rps_mask=0f
 
+#Enable Power Save offload
+gEnablePowerSaveOffload=2
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
